optimise logic/queries and correct tests